Fixed test and gradle config