@@ -49,4 +49,10 @@ dependencies {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+
+    // Убираем предупреждения ByteBuddy/Mockito для JDK 21+
+    jvmArgs(
+        "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+        "--add-opens", "java.base/java.util=ALL-UNNAMED"
+    )
 }
